@@ -1,3 +1,6 @@
+2009-03-06 Stephen Sinclair <radarsat1@gmail.com>
+	* Add a return value to lo_bundle_add_message().
+
 2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
 	* For multicast, enable SO_REUSEPORT as well as SO_REUSEADDR. (Mike Wozniewski)
 
